# crashy

./: CMakeLists.txt  LICENSE  README.md
include/: crashy.h  simple-raw.h
src/: crash.cpp  nocrash.cpp  reporter.cpp  reporter.h  simple-raw.cpp  term-defines.h  tester.cpp  tosourcecode.cpp  tosourcecode.h  unwinder.cpp  unwinder.h  util.cpp  util.h
